--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN" "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 <web-app id="WebApp_ID">
 	<display-name>ProyectoRestaurantServer</display-name>
 	<welcome-file-list>
@@ -10,4 +9,19 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	<servlet>
+  <description>JAX-RS Tools Generated - Do not modify</description>
+  <servlet-name>Chef Servlet</servlet-name>
+  <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+  <init-param>
+   <param-name>com.sun.jersey.config.property.packages</param-name>
+   <param-value>com.chefserver.resources</param-value>
+  </init-param>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>Chef Servlet</servlet-name>
+  <url-pattern>/restchef/*</url-pattern>
+ </servlet-mapping>
 </web-app>
+
