--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID">
-	<display-name>ProyectoRestaurantServer</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<servlet>
-  <description>JAX-RS Tools Generated - Do not modify</description>
-  <servlet-name>Chef Servlet</servlet-name>
-  <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-  <init-param>
-   <param-name>com.sun.jersey.config.property.packages</param-name>
-   <param-value>com.chefserver.resources</param-value>
-  </init-param>
-  <load-on-startup>1</load-on-startup>
- </servlet>
- <servlet-mapping>
-  <servlet-name>Chef Servlet</servlet-name>
-  <url-pattern>/restchef/*</url-pattern>
- </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		xmlns="http://java.sun.com/xml/ns/javaee" 
+		xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+		id="WebApp_ID" 
+		version="3.0">
+		
+  <display-name>RestServer</display-name>
+  <servlet>
+  	<display-name>Rest Server</display-name>
+  	<servlet-name>RestAplication</servlet-name>
+  	 <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+    <init-param>
+        <param-name>jersey.config.server.provider.packages</param-name>
+  		<param-value>com.rest</param-value>
+  	</init-param>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>RestAplication</servlet-name>
+  	<url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
 </web-app>
-
