--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/prueba xml/src/xstream-1.4.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
